# saga

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SELF_CHECK.md  SUPPORT.md  codemeta.json  conftest.py  docker-compose.yaml  environment.yaml  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yaml  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml  reproducibility_question.yaml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  reproducibility.yaml  security.yaml
benchmarks/memory/: peak_memory_a100.md
benchmarks/runtime/: inference_latency_a100.md  train_throughput_a100.md
configs/: lifetime_monte_carlo.yaml  saga_dim192.yaml  saga_dim768.yaml  saga_main.yaml  tax_microsimulation_2022_schedule.yaml
data/: schema.yaml
data/real/: README.md
data/synthetic/: README.md  SHA256SUMS.txt  moment_validation.csv
docs/: faq.md  glossary.md  index.md  roadmap.md
docs/bibliography/: 00-bibliography-index.md  citation-graph.md  references.md
docs/data/: 00-data-index.md  lisa-register-overview.md  mona-secure-environment.md  sample-selection-rules.md  synthetic-mirror.md  train-cal-test-splits.md  variable-inventory.md
docs/deployment/: inference-latency.md  microsimulation-integration.md  model-card.md
docs/ethics/: broader-impact.md  data-governance.md  dual-use-statement.md  ethical-approval.md
docs/methodology/: 00-methodology-index.md  adaptive-temporal-conformal-theorem.md  baselines.md  lifetime-monte-carlo-aggregation.md  saga-architecture.md  split-conformal-calibration.md  tokenization-scheme.md  training-objective.md
docs/paper-mirror/: 00-abstract.md  01-introduction.md  02-related-work.md  03-method.md  04-data.md  05-experiments.md  06-discussion.md  07-conclusion.md  appendix-a-hyperparameters.md  appendix-b-diebold-mariano.md  appendix-c-gkos-estimation.md  appendix-d-synthetic-data-protocol.md  appendix-e-adaptive-temporal-conformal.md  appendix-f-monte-carlo-sensitivity.md  appendix-g-reproducibility.md
docs/reproducibility/: docker-environment.md  full-replication.md  hardware-notes.md  quickstart.md  seed-list.md  wall-clock-budgets.md
docs/results/: 00-results-index.md  ablation-study.md  calibration-coverage.md  computational-cost.md  downstream-tax-microsimulation.md  headline-forecast-accuracy.md  heterogeneity-decomposition.md  interpretability-attention.md  (+3 more)
notebooks/: 00-quickstart.ipynb  01-conformal-calibration.ipynb  02-lifetime-earnings-aggregation.ipynb  03-tax-microsimulation.ipynb  04-ablation-study.ipynb  05-heterogeneity-decomposition.ipynb  06-diebold-mariano.ipynb  07-model-interpretability.ipynb
scripts/: aggregate_lifetime_earnings.sh  calibrate_conformal.sh  download_synthetic_mirror.sh  estimate_gkos.sh  evaluate_forecast_accuracy.sh  export_synthetic_mirror.sh  generate_synthetic_dataset.py  run_all_ablations.sh  run_all_placebos.sh  run_all_robustness.sh  run_inference.sh  run_interpretability_analysis.sh  run_quickstart_smoke.sh  run_tax_microsimulation.sh  train_saga.sh  verify_reproducibility.sh
(+61 files in other folders)
