[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "saga-forecast"
version = "1.0.0"
description = "Sequence-Adaptive Generative Architecture for multi-horizon probabilistic forecasting of administrative earnings panels, with adaptive temporal conformal prediction. Public artifact for the IEEE TPAMI 2026 SAGA paper."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [
  {name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundstrom-Imanov", email = "olaf.laitinen@su.se"},
  {name = "Hafize Gonca Comert"},
]
maintainers = [
  {name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundstrom-Imanov", email = "olaf.laitinen@su.se"},
]
keywords = [
  "machine-learning",
  "probabilistic-forecasting",
  "conformal-prediction",
  "transformer",
  "tabular-data",
  "register-data",
  "microsimulation",
  "labor-economics",
  "earnings-dynamics",
  "tpami",
  "reproducibility",
  "pytorch",
  "scientific-software",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.4",
  "numpy>=1.26,<3.0",
  "pandas>=2.2",
  "pyarrow>=15",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "lightgbm>=4.3",
  "structlog>=24.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "black>=24",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0",
  "jupyterlab>=4",
  "nbconvert>=7",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-mermaid2-plugin>=1.1",
]

[project.urls]
Homepage = "https://github.com/olaflaitinen/saga"
Documentation = "https://olaflaitinen.github.io/saga"
Source = "https://github.com/olaflaitinen/saga"
Issues = "https://github.com/olaflaitinen/saga/issues"
Changelog = "https://github.com/olaflaitinen/saga/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "PT", "RET", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-q"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "property: property-based tests",
]

[tool.coverage.run]
source = ["src/saga"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
