# setup.cfg
# Minimal setup.cfg for compatibility with tools that do not yet read pyproject.toml.
# All primary build configuration lives in pyproject.toml.

[metadata]
name = saga-forecast
version = 1.0.0

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11,<3.13

[options.packages.find]
where = src
